tests/diagnostics/declarations/types/enum_type_parameters/expect.txt
# exit: 1
lib.coppice:1:6: error: enum type 'Outcome' cannot declare type parameters
  type Outcome[T] :: enum {
       ^
